force-app/main/default/objects/Units__c/Units__c.object-meta.xml
<CustomObject>
    <label>Unidades</label>
    <nameField>
        <label>Nome Unidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>