force-app/main/default/objects/Units__c/fields/Agente_comissionado_pago__c.field-meta.xml
<CustomField>
    <fullName>Agente_comissionado_pago__c</fullName>
    <label>Agente comissionado pago?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Estornado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>