force-app/main/default/objects/Units__c/fields/Canal_Conversao__c.field-meta.xml
<CustomField>
    <fullName>Canal_Conversao__c</fullName>
    <label>Canal Conversao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Parceiras</fullName>
            </value>
            <value>
                <fullName>Full self-service</fullName>
            </value>
            <value>
                <fullName>Grandes Contas</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>