force-app/main/default/objects/Units__c/fields/control_Assinou_contrato_primeiro_aces__c.field-meta.xml
<CustomField>
    <fullName>control_Assinou_contrato_primeiro_aces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>control Assinou contrato / primeiro aces</label>
    <type>Checkbox</type>
</CustomField>