force-app/main/default/objects/Units__c/fields/control_documentos_validados__c.field-meta.xml
<CustomField>
    <fullName>control_documentos_validados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>control documentos validados</label>
    <type>Checkbox</type>
</CustomField>