force-app/main/default/objects/Units__c/fields/control_troca_de_titularidade_em_anda__c.field-meta.xml
<CustomField>
    <fullName>control_troca_de_titularidade_em_anda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>control troca de titularidade em anda</label>
    <type>Checkbox</type>
</CustomField>