force-app/main/default/objects/Units__c/fields/Data_de_Instala_o_do_Medidor__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Instala_o_do_Medidor__c</fullName>
    <label>Data de Instalação do Medidor</label>
    <type>DateTime</type>
</CustomField>