force-app/main/default/objects/Units__c/fields/Data_de_vencimento_da_primeira_fatura__c.field-meta.xml
<CustomField>
    <fullName>Data_de_vencimento_da_primeira_fatura__c</fullName>
    <label>Data de vencimento da primeira fatura</label>
    <type>DateTime</type>
</CustomField>