force-app/main/default/objects/Units__c/fields/Endere_o_completo__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_completo__c</fullName>
    <formula>Address__c + &apos;, &apos; + Number__c + &apos;, &apos; + Complement__c + &apos;, &apos; +  District__c  + &apos;, &apos; +  City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Completo</label>
    <type>Text</type>
</CustomField>