force-app/main/default/objects/Units__c/fields/Finaliza_o_da_Troca_de_Titularidade__c.field-meta.xml
<CustomField>
    <fullName>Finaliza_o_da_Troca_de_Titularidade__c</fullName>
    <label>Finalização da Troca de Titularidade</label>
    <type>DateTime</type>
</CustomField>