force-app/main/default/objects/Units__c/fields/ID_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>ID_do_Cliente__c</fullName>
    <label>ID do Cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>