force-app/main/default/objects/Units__c/fields/Link_da_Primeira_Fatura__c.field-meta.xml
<CustomField>
    <fullName>Link_da_Primeira_Fatura__c</fullName>
    <label>Link da Primeira Fatura</label>
    <type>Url</type>
</CustomField>