force-app/main/default/objects/Units__c/fields/MGM__c.field-meta.xml
<CustomField>
    <fullName>MGM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MGM</label>
    <type>Checkbox</type>
</CustomField>