force-app/main/default/objects/Units__c/fields/MGM_Indica_por__c.field-meta.xml
<CustomField>
    <fullName>MGM_Indica_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MGM Indica por</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades (MGM Indica por)</relationshipLabel>
    <relationshipName>Unidades1</relationshipName>
    <type>Lookup</type>
</CustomField>