force-app/main/default/objects/Units__c/fields/MotivoderecusadoJuridico__c.field-meta.xml
<CustomField>
    <fullName>MotivoderecusadoJuridico__c</fullName>
    <label>Motivo de recusa do Jurídico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>