force-app/main/default/objects/Units__c/fields/NumerodoContrato__c.field-meta.xml
<CustomField>
    <fullName>NumerodoContrato__c</fullName>
    <label>Número do Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>