force-app/main/default/objects/Units__c/fields/Status_Onboard__c.field-meta.xml
<CustomField>
    <fullName>Status_Onboard__c</fullName>
    <label>Status Onboard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documento</fullName>
            </value>
            <value>
                <fullName>Troca de titularidade</fullName>
            </value>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>Instalação</fullName>
            </value>
            <value>
                <fullName>Finalização de Onboard</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>