force-app/main/default/objects/Units__c/fields/StatusDocumento__c.field-meta.xml
<CustomField>
    <fullName>StatusDocumento__c</fullName>
    <label>Status Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciado</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Atrasado</fullName>
            </value>
            <value>
                <fullName>Com Problema</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Requer Validação</fullName>
            </value>
            <value>
                <fullName>Validação do Jurídico</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>