force-app/main/default/objects/Units__c/recordTypes/UnidadePF.recordType-meta.xml
<RecordType>
    <fullName>UnidadePF</fullName>
    <active>true</active>
    <description>Unidade Consumidora Pessoa Física</description>
    <label>Pessoa Física</label>
</RecordType>