force-app/main/default/objects/Units__c/recordTypes/UnidadePJ.recordType-meta.xml
<RecordType>
    <fullName>UnidadePJ</fullName>
    <active>true</active>
    <description>Unidade Consumidora Pessoa Jurídica</description>
    <label>Pessoa Jurídica</label>
</RecordType>