force-app/main/default/objects/Units__c/validationRules/CNPJ_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>IF( LEN(CNPJ__c)= 14 , OR(AND(MOD((
( VALUE( MID( CNPJ__c , 1, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 2, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 3, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 4, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 5, 1 ) ) * 2 ) +
( VALUE( MID( CNPJ__c , 6, 1 ) ) * 9 ) +
( VALUE( MID( CNPJ__c , 7, 1 ) ) * 8 ) +
( VALUE( MID( CNPJ__c , 8, 1 ) ) * 7 ) +
( VALUE( MID( CNPJ__c , 9, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 10, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 11, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 12, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 13, 1 ) ) * 2 )
), 11
) &lt;= 1
, VALUE( MID( CNPJ__c , 14, 1 ) ) != 0
)
, AND(MOD((
( VALUE( MID( CNPJ__c , 1, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 2, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 3, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 4, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 5, 1 ) ) * 2 ) +
( VALUE( MID( CNPJ__c , 6, 1 ) ) * 9 ) +
( VALUE( MID( CNPJ__c , 7, 1 ) ) * 8 ) +
( VALUE( MID( CNPJ__c , 8, 1 ) ) * 7 ) +
( VALUE( MID( CNPJ__c , 9, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 10, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 11, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 12, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 13, 1 ) ) * 2 ))
, 11 ) &gt; 1
, ( 11 - MOD((
( VALUE( MID( CNPJ__c , 1, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 2, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 3, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 4, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 5, 1 ) ) * 2 ) +
( VALUE( MID( CNPJ__c , 6, 1 ) ) * 9 ) +
( VALUE( MID( CNPJ__c , 7, 1 ) ) * 8 ) +
( VALUE( MID( CNPJ__c , 8, 1 ) ) * 7 ) +
( VALUE( MID( CNPJ__c , 9, 1 ) ) * 6 ) +
( VALUE( MID( CNPJ__c , 10, 1 ) ) * 5 ) +
( VALUE( MID( CNPJ__c , 11, 1 ) ) * 4 ) +
( VALUE( MID( CNPJ__c , 12, 1 ) ) * 3 ) +
( VALUE( MID( CNPJ__c , 13, 1 ) ) * 2 )
)
, 11
) ) != VALUE( MID( CNPJ__c , 14, 1 ))
)), IF(LEN(CNPJ__c)&lt;14 &amp;&amp; LEN(CNPJ__c) &lt;&gt; 0,true,false))</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Favor informar CNPJ válido</errorMessage>
</ValidationRule>