force-app/main/default/objects/Units__c/validationRules/Relation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Relation_Lead</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Lead__c )</errorConditionFormula>
    <errorMessage>Necessario relacionar o lead</errorMessage>
</ValidationRule>